--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ namespace.
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.parallel-api.html" class="wiki_link">clojure.parallel</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
@@ -55,10 +55,6 @@ namespace.
     <br />
   </div><div style="margin-left: 1em;" class="toc-section">
     <a href="#clojure.main">clojure.main</a>
-    
-    <br />
-  </div><div style="margin-left: 1em;" class="toc-section">
-    <a href="#clojure.parallel">clojure.parallel</a>
     
     <br />
   </div><div style="margin-left: 1em;" class="toc-section">
@@ -155,17 +151,6 @@ This is API documentation for the latest committed checkin of the Clojure core.
   
   Public variables and functions:
   <span id="var-link"><a href="clojure.main-api.html#clojure.main/load-script" id="var-tag">load-script</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/main" id="var-tag">main</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/repl" id="var-tag">repl</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/repl-caught" id="var-tag">repl-caught</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/repl-exception" id="var-tag">repl-exception</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/repl-prompt" id="var-tag">repl-prompt</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/repl-read" id="var-tag">repl-read</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/skip-if-eol" id="var-tag">skip-if-eol</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/skip-whitespace" id="var-tag">skip-whitespace</a> </span><span id="var-link"><a href="clojure.main-api.html#clojure.main/with-bindings" id="var-tag">with-bindings</a> </span><br />
-  
-</div><div id="namespace-entry">
-  <br />
-  <hr />
-  <h2 id="clojure.parallel">clojure.parallel</h2>
-  <!-- by <span id="author">Author here</span><br /> -->
-  <a href="clojure.parallel-api.html" id="api-link">Detailed API documentation</a><br />
-  <pre id="namespace-docstr"></pre>
-  
-  Public variables and functions:
-  <br />
   
 </div><div id="namespace-entry">
   <br />
